--- a/client/bower.json
+++ b/client/bower.json
@@ -22,6 +22,7 @@
     "moment": "~2.5",
     "less.js": "~1.5",
     "font-awesome": "~4.0",
-    "restangular": "~1.3.1"
+    "restangular": "~1.3.1",
+    "angular-ui-select2": "~0.0.5"
   }
 }
