--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,8 @@
     "passport-http-bearer": "~1.0.1",
     "oauth2orize": "~1.0.0",
     "cors": "~2.1.1",
-    "q": "~1.0.0"
+    "q": "~1.0.0",
+    "mongoose-auto-increment": "~2.1.3"
   },
   "devDependencies": {
     "grunt": "~0.4.2",
