--- a/client/bower.json
+++ b/client/bower.json
@@ -23,6 +23,7 @@
     "less.js": "~1.5",
     "font-awesome": "~4.0",
     "restangular": "~1.3.1",
-    "angular-ui-select2": "~0.0.5"
+    "angular-ui-select2": "~0.0.5",
+    "angular-charts": "~0.0.1"
   }
 }
