client - dashboard implemented

--- a/client/.jshintrc
+++ b/client/.jshintrc
@@ -23,6 +23,7 @@
         "module": true,
         "inject": true,
         "it": true,
-        "expect": true
+        "expect": true,
+        "io": true
     }
 }
