--- a/client/bower.json
+++ b/client/bower.json
@@ -24,6 +24,7 @@
     "font-awesome": "~4.0",
     "restangular": "~1.3.1",
     "angular-ui-select2": "~0.0.5",
-    "angular-charts": "~0.0.1"
+    "angular-charts": "~0.0.1",
+    "angular-socket-io": "~0.4.0"
   }
 }
