--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,10 @@
     "grunt-contrib-less": "~0.8",
     "grunt-contrib-watch": "~0.5",
     "grunt-contrib-jasmine": "~0.5",
-    "load-grunt-tasks": "~0.2"
+    "load-grunt-tasks": "~0.2",
+    "karma": "~0.12.1",
+    "karma-jasmine": "~0.1.5",
+    "karma-chrome-launcher": "~0.1.2",
+    "grunt-karma": "~0.8.2"
   }
 }
